--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "3ee7c36f-3fd6-4c93-81c8-c465bed3fe1c"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
