--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "angular-bootstrap-md": "^12.2.0",
     "animate.css": "^4.1.1",
     "chart.js": "^2.9.4",
-    "firebase": "^9.6.8",
+    "firebase": "^9.6.9",
     "hammerjs": "^2.0.8",
+    "rxfire": "^6.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
